wrap bio, posts, add a link to edit profile in the account menu, fix filtering shoes by tag, fix filtering shoes by brand

--- a/static/main.css
+++ b/static/main.css
@@ -14,6 +14,11 @@ article {
 
 pre {
     font-family: Arial, sans-serif;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 .full {
